깃,깃허브에 대한 설명 추가

--- a/INDEX.html
+++ b/INDEX.html
@@ -40,6 +40,7 @@
       달리기 동아리와 스케이트 보드 동아리에 참여하였으나 코로나 19 이슈와
       준비되지 못한 디자인의 전문지식으로 인해 다소 정적이었던 활동 방식을
       바꾸려 커뮤니케이션디자인학과 동아리에 가입하여 4월부터 활동 예정입니다.
-    </p>
+    </p>지금까지 해 놓은 작업들로 현재 behance에 개인 포트폴리오가 개설된
+    상태입니다.</p>
   </body>
 </html>
